--- a/.env
+++ b/.env
@@ -32,8 +32,8 @@ DATABPASE_PASSWORD=
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=
+DATABASE_URL="mysql://root:test@localhost:3306/plura-build"
 PROD_DATABASE_URL=
-LOCAL_DATABASE_URL=
+LOCAL_DATABASE_URL="mysql://root:test@localhost:3306/plura-build"
 # https://www.builder.io/c/docs/using-your-api-key
 NEXT_PUBLIC_BUILDER_API_KEY=
